# advent-2024

1st_day/d1/: main.py
1st_day/tests/: __init__.py  example.py
day_1/: pyproject.toml
day_10/: pyproject.toml
day_10/day_10/: main.py  part_1.py  part_2.py
day_10/tests/: test_day_10.py
day_11/: pyproject.toml
day_11/day_11/: main.py  part_1.py  part_2.py
day_11/tests/: test_day_11.py
day_12/: pyproject.toml
day_12/day_12/: main.py  part_1.py  part_2.py
day_12/tests/: test_day_12.py
day_13/: pyproject.toml
day_13/day_13/: machine.py  main.py  part_1.py  part_2.py
day_13/tests/: test_day_13.py
day_14/: pyproject.toml
day_14/day_14/: main.py  part_1.py  part_2.py  robots.py
day_14/tests/: test_day_14.py
day_15/: pyproject.toml
day_15/day_15/: main.py  part_1.py  part_2.py
day_15/tests/: test_day_15.py
day_16/: pyproject.toml
day_16/day_16/: main.py  part_1.py  part_2.py
day_16/tests/: test_day_16.py
day_17/: pyproject.toml
day_17/day_17/: main.py  part_1.py  part_2.py
day_17/tests/: test_day_17.py
day_18/: pyproject.toml
day_18/day_18/: main.py  part_1.py
day_2/: pyproject.toml
day_2/day_2/: __init__.py  main.py
day_2/tests/: test.py
day_3/: pyproject.toml
day_3/day_3/: main.py
day_3/tests/: test.py
day_4/: pyproject.toml
day_4/day_4/: common.py  main.py  part_1.py  part_2.py
day_4/tests/: test_day_4.py
day_5/: pyproject.toml
day_5/day_5/: main.py  part1.py  part2.py  (+1 more)
day_6/: diff.py  foo.txt  foo2.txt  pyproject.toml
day_7/: pyproject.toml
day_8/: pyproject.toml
day_9/: pyproject.toml
(+24 files in other folders)
