[tool.poetry]
name = "d1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
[tool.poetry.scripts]
test = "tests.example:do_example"
start = "d1.main:puzzle"

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
