[tool.poetry]
name = "day-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
test1 = 'tests.test:part_1_example'
test2 = 'tests.test:part_2_example'
start = 'day_2.main:run'

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
